fixed result div padding on mobile

--- a/main.css
+++ b/main.css
@@ -1,7 +1,7 @@
 /* 1 em = 16px!!! */
 
 html {
-    min-height: 100%;
+    min-height: 100vh;
     margin: 0;
     padding: 0;
 }
@@ -27,7 +27,7 @@ h2, h3, h4 {
     font-family: 'Poppins';
 }
 
-p, a, span, #name {
+p, a, span {
     font-family: 'Open Sans';
     font-size: 1rem;
 }
@@ -42,9 +42,12 @@ ul {
     list-style-type: none;
     text-align: center;
     background-color: rgba(60, 146, 82, .8);
+    padding: .5em;
+    padding-top: 1.0em;
     border: 1px solid black;
     border-radius: 1em;
     color: white;
+    line-height: .5;
 }
 
 footer {
